<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.fragments.processorTest.ProcessorTestResultSelectorFragment">

    <TextView
        android:id="@+id/tv_dummy_info"
        style="@style/Primer.Text.Small.Body"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/primer_test_header_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <RadioGroup
        android:id="@+id/rg_response_type"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/xl_vertical_margin"
        android:checkedButton="@id/rb_authorized"
        android:divider="@drawable/divider"
        android:orientation="vertical"
        android:showDividers="middle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_dummy_info">

        <RadioButton
            android:id="@+id/rb_authorized"
            style="@style/Primer.RadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:tag="SUCCESS"
            android:text="@string/label_authorized"
            tools:ignore="TextContrastCheck" />

        <RadioButton
            android:id="@+id/rb_declined"
            style="@style/Primer.RadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:tag="DECLINE"
            android:text="@string/label_declined" />

        <RadioButton
            android:id="@+id/rb_failed"
            style="@style/Primer.RadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:tag="FAIL"
            android:text="@string/label_failed" />

    </RadioGroup>

    <io.primer.android.ui.components.PayButton
        android:id="@+id/btnPay"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/xl_vertical_margin"
        android:layout_marginBottom="@dimen/xxl_vertical_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rg_response_type"
        tools:layout_height="48dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
