<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.fragments.multibanko.MultibancoConditionsFragment">

    <TextView
        android:id="@+id/tvTitle"
        style="@style/Primer.Text.Title.Small"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/multibancoTitleConditions"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/ll_conditions_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/xl_vertical_margin"
        android:divider="@drawable/divider_vertical_space"
        android:orientation="vertical"
        android:showDividers="middle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle">

        <LinearLayout
            android:id="@+id/ll_1_step"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvPoint1"
                style="@style/Primer.Text.Small.Muted"
                android:layout_width="28dp"
                android:layout_height="wrap_content"
                android:text="1."
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/tvPoint1Description"
                style="@style/Primer.Text.Small.Muted"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/multibancoPayment1Step" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_2_step"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvPoint2"
                android:layout_width="28dp"
                android:layout_height="wrap_content"
                android:text="2.1"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/tvPoint2Description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/multibancoPayment2Step" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_3_step"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvPoint3"
                android:layout_width="28dp"
                android:layout_height="wrap_content"
                android:text="2.2"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/tvPoint3Description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/multibancoPayment3Step" />

        </LinearLayout>

    </LinearLayout>

    <io.primer.android.ui.components.PayButton
        android:id="@+id/btnConfirmPay"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/xl_vertical_margin"
        android:layout_marginBottom="@dimen/xxl_vertical_margin"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_conditions_group"
        app:layout_constraintVertical_bias="1"
        tools:layout_height="48dp"
        tools:text="@string/confirmToPayButtonTitle" />

</androidx.constraintlayout.widget.ConstraintLayout>
