<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:paddingBottom="@dimen/large_vertical_margin">

    <TextView
        android:id="@+id/tv_title_complete"
        style="@style/Primer.Text.Large"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/completeYourPayment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_description"
        style="@style/Primer.Text.Small.Muted"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_vertical_margin2"
        android:text="@string/multibancoCompleteDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_complete" />

    <ImageView
        android:id="@+id/iv_calendar_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/xl_vertical_margin"
        android:src="@drawable/ic_calendar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_description" />

    <TextView
        android:id="@+id/tv_label_due_date"
        style="@style/Primer.Text.Small.Muted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/dueAt"
        app:layout_constraintBottom_toBottomOf="@+id/iv_calendar_icon"
        app:layout_constraintStart_toEndOf="@+id/iv_calendar_icon"
        app:layout_constraintTop_toTopOf="@+id/iv_calendar_icon" />

    <TextView
        android:id="@+id/tv_value_due_date"
        style="@style/Primer.Text.Small"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/iv_calendar_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_label_due_date"
        app:layout_constraintTop_toTopOf="@+id/iv_calendar_icon"
        tools:text="10:45 on 21 May 2024" />

    <LinearLayout
        android:id="@+id/ll_codes_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/xl_vertical_margin"
        android:layout_marginBottom="@dimen/xxxl_vertical_margin"
        android:background="@drawable/background_multibank_codes_description"
        android:divider="@color/primer_border_color"
        android:orientation="vertical"
        android:padding="@dimen/large_padding"
        android:showDividers="middle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_calendar_icon"
        app:layout_constraintVertical_bias="0"
        tools:minHeight="100dp">

        <LinearLayout
            android:id="@+id/ll_entity_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingVertical="@dimen/medium_vertical_margin2">

            <TextView
                android:id="@+id/tv_label_entity"
                style="@style/Primer.Text.Small.Muted"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/multibancoEntity" />

            <TextView
                android:id="@+id/tv_value_entity"
                style="@style/Primer.Text.Small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/roboto_medium"
                android:gravity="end"
                tools:text="321123" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_reference_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingVertical="@dimen/medium_vertical_margin2">

            <TextView
                android:id="@+id/tv_label_reference"
                style="@style/Primer.Text.Small.Muted"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/multibancoReference" />

            <TextView
                android:id="@+id/tv_value_reference"
                style="@style/Primer.Text.Small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/roboto_medium"
                android:gravity="end"
                tools:text="321 123 552" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_amount_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingVertical="@dimen/medium_vertical_margin2">

            <TextView
                android:id="@+id/tv_label_amount"
                style="@style/Primer.Text.Small.Muted"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/multibancoAmount" />

            <TextView
                android:id="@+id/tv_value_amount"
                style="@style/Primer.Text.Small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/roboto_medium"
                android:gravity="end"
                tools:text="40$" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
